tests/errors/negative_index.ptt
spark {
  nums is [10, 20, 30]
  yell(nums[-1])
}
